Updated image directory and html file

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                       </ul>
                  </nav>
              </div>
-             <h2><span>Hi,</span> I'm coder who loves to build apps!</h2>
+             <h2><span>Hi,</span> I'm a developer that loves clean &amp; elegant code!</h2>
          </div>
      </header>
 
